# metadatazero

./: LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
scripts/: combine-updater-json.mjs  download-exiftool.mjs  generate-updater-json.mjs  rename-artifacts.mjs
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  exiftool.rs  lib.rs  main.rs
